# migrate-to-uv

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml  validate-ci-workflows.yml  validate-renovate-config.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  configuration.md  index.md  supported-package-managers.md  usage-and-configuration.md  usage.md
scripts/: bump-version.sh  copy-changelog.sh  copy-contributing.sh
search/: search_index.json
src/: cli.rs  detector.rs  errors.rs  lib.rs  toml.rs  utils.rs  uv.rs
src/converters/: mod.rs
src/converters/pip/: dependencies.rs  mod.rs
src/converters/pip_tools/: mod.rs
src/converters/pipenv/: dependencies.rs  mod.rs
src/converters/poetry/: build_backend.rs  dependencies.rs  mod.rs  project.rs  sources.rs  version.rs
src/converters/poetry/build_backend/: hatch.rs  mod.rs  uv.rs
src/converters/poetry/snapshots/: migrate_to_uv__converters__poetry__tests__perform_migration.snap  migrate_to_uv__converters__poetry__tests__perform_migration_dep_group_include_in_dev.snap  migrate_to_uv__converters__poetry__tests__perform_migration_dep_group_keep_existing.snap  migrate_to_uv__converters__poetry__tests__perform_migration_dep_group_merge_in_dev.snap  migrate_to_uv__converters__poetry__tests__perform_migration_keep_old_metadata.snap
src/converters/setuptools/: dependencies.rs  mod.rs  project.rs
src/schema/: pep_621.rs  poetry.rs  utils.rs  uv.rs
supported-package-managers/: index.html
tests/: errors.rs  pip.rs  pip_tools.rs  pipenv.rs  poetry.rs  setuptools.rs
tests/common/: mod.rs
tests/fixtures/pip-tools/full/: requirements.in  requirements.txt
tests/fixtures/pip/full/: requirements-dev.txt  requirements-nested.txt  requirements-typing.txt  requirements.txt
tests/fixtures/pipenv/lock_file_conflicts_with_pyproject/: Pipfile  pyproject.toml
tests/fixtures/poetry/build_backend/hatch/: pyproject.toml
tests/fixtures/poetry/build_backend/hatch_incompatible/: pyproject.toml
tests/fixtures/poetry/build_backend/implicit_package_no_package_metadata/: pyproject.toml
tests/fixtures/poetry/build_backend/implicit_package_src_and_no_src/: pyproject.toml
tests/fixtures/poetry/build_backend/uses_namespace/: pyproject.toml
tests/fixtures/poetry/build_backend/uv/: pyproject.toml
tests/fixtures/poetry/build_backend/uv_incompatible/: pyproject.toml
tests/fixtures/poetry/build_backend_hatch/: pyproject.toml
tests/fixtures/poetry/build_backend_hatch_compatible/: pyproject.toml
tests/fixtures/poetry/build_backend_hatch_incompatible/: pyproject.toml
tests/fixtures/poetry/build_backend_uv_incompatible/: pyproject.toml
tests/fixtures/poetry/full/: pyproject.toml
tests/fixtures/poetry/pipe_delimited_platforms/: pyproject.toml
tests/fixtures/poetry/with_migration_errors/: pyproject.toml
tests/fixtures/setuptools/full/: setup.cfg
usage-and-configuration/: index.html
