[package]
name = "migrate-to-uv"
version = "0.7.3"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["Mathieu Kniewallner <mathieu.kniewallner@gmail.com>"]
default-run = "migrate-to-uv"

[dependencies]
clap = { version = "=4.5.47", features = ["derive"] }
clap-verbosity-flag = "=3.0.4"
env_logger = "=0.11.8"
indexmap = { version = "=2.11.4", features = ["serde"] }
log = "=0.4.28"
owo-colors = "=4.2.2"
pep440_rs = "=0.7.3"
pep508_rs = "=0.9.2"
regex = "=1.11.2"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
toml = { version = "=0.9.7", features = ["preserve_order"] }
toml_edit = { version = "=0.23.6", features = ["display", "serde"] }
url = "=2.5.7"

[dev-dependencies]
insta = { version = "=1.43.2", features = ["filters"] }
insta-cmd = "=0.6.0"
rstest = "=0.26.1"
tempfile = "=3.21.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
