[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "pipe-platform-test"
version = "0.1.0"
description = "Test pipe-delimited platform markers"

[tool.poetry.dependencies]
python = "^3.11"

# Pipe-delimited platforms in regular dependency
unix-dep = { version = "1.0.0", platform = "darwin|linux" }

# Pipe-delimited platforms in optional dependency
pytest-unix = { version = "7.0.0", optional = true, platform = "darwin|linux" }

[tool.poetry.extras]
test = ["pytest-unix"]
