[metadata]
name = foobar
version = 0.1.0
author = John Doe
author_email = john.doe@example.com
maintainer = Dohn Joe
maintainer_email = dohn.joe@example.com
description = A fabulous project.
long_description = A fabulous and fantastic project.
keywords = foo, bar, foobar
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires = arrow>=1.2.3; httpx==0.28.1

[options.extras_require]
pdf =
    foo>=1.0.0
    bar
rest =
    baz>=2.0.2
