[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foobar"
version = "0.1.0"
description = "A fabulous project."
authors = ["John Doe <john.doe@example.com>"]
packages = [
    { include = "packages_sdist_wheel" },
    { include = "packages_sdist_wheel_2", format = ["sdist", "wheel"] },
    { include = "packages_sdist", format = "sdist" },
    { include = "packages_sdist_2", format = ["sdist"] },
    { include = "packages_wheel", format = "wheel" },
    { include = "packages_wheel_2", format = ["wheel"] },
    # An empty array for `format` means that files are not included anywhere.
    { include = "packages_nowhere", format = [] },
    { include = "packages_glob_sdist_wheel/**/*.py" },
    { include = "packages_glob_sdist_wheel_2/**/*.py", format = ["sdist", "wheel"] },
    { include = "packages_glob_sdist/**/*.py", format = "sdist" },
    { include = "packages_glob_sdist_2/**/*.py", format = ["sdist"] },
    { include = "packages_glob_wheel/**/*.py", format = "wheel" },
    { include = "packages_glob_wheel_2/**/*.py", format = ["wheel"] },
    # An empty array for `format` means that files are not included anywhere.
    { include = "packages_glob_nowhere/**/*.py", format = [] },
    { include = "packages_from_sdist_wheel", from = "from" },
    { include = "packages_to_sdist_wheel", to = "to" },
    { include = "packages_from_to_sdist_wheel", from = "from", to = "to" },
    { include = "packages_sdist_wheel_with_excluded_files" },
    { include = "text_file_sdist_wheel.txt" },
    { include = "text_file_sdist.txt", format = "sdist" },
    { include = "text_file_wheel.txt", format = "wheel" },
]
include = [
    "include_sdist",
    { path = "include_sdist_2" },
    { path = "include_sdist_3", format = "sdist" },
    { path = "include_sdist_4", format = ["sdist"] },
    { path = "include_sdist_wheel", format = ["sdist", "wheel"] },
    { path = "include_wheel", format = "wheel" },
    { path = "include_wheel_2", format = ["wheel"] },
    # An empty array for `format` means that files are not included anywhere.
    { path = "include_nowhere", format = [] },
]
exclude = [
    "packages_sdist_wheel_with_excluded_files/bar.py",
    "packages_sdist_wheel_with_excluded_files/foobar",
]

[tool.poetry.dependencies]
python = ">=3.10"
