[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foobar"
version = "0.1.0"
description = "A fabulous project."
authors = ["John Doe <john.doe@example.com>"]
packages = [
    { include = "packages_wheel", format = "wheel" },
    { include = "packages_wheel_2", format = ["wheel"] },
    { include = "packages_glob_sdist_wheel/**/*.py" },
    { include = "packages_glob_sdist_wheel_2/**/*.py", format = ["sdist", "wheel"] },
    { include = "packages_glob_wheel/**/*.py", format = "wheel" },
    { include = "packages_glob_wheel_2/**/*.py", format = ["wheel"] },
    { include = "packages_from_sdist_wheel", from = "from" },
    { include = "packages_to_sdist_wheel", to = "to" },
    { include = "packages_from_to_sdist_wheel", from = "from", to = "to" },
    { include = "packages_glob_to_sdist_wheel/**/*.py", to = "to" },
    { include = "packages_glob_from_to_sdist_wheel/**/*.py", from = "from", to = "to" },
    { include = "text_file_sdist_wheel.txt" },
    { include = "text_file_wheel.txt", format = "wheel" },
]
include = [
    { path = "include_sdist_wheel", format = ["sdist", "wheel"] },
    { path = "include_wheel", format = "wheel" },
    { path = "include_wheel_2", format = ["wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10"
